# yast-restore

./: .cvsignore  .gitignore  RPMNAME  VERSION  configure.in.in  yast2-restore.spec.in
agents/: Makefile.am
doc/: Makefile.am  restore.txt
doc/autodocs/: Makefile.am
package/: yast2-module-restore.changes  yast2-restore.changes  yast2-restore.spec
src/: .gitignore  Makefile.am  Restore.ycp  helps.ycp  misc.ycp  restore.desktop  restore.y2cc  restore.ycp  restore_auto.ycp  restore_bootloader.ycp  restore_parse_pkginfo.pl  restore_write.ycp  summary_dialog.ycp  ui.ycp
src/clients/: restore.rb  restore.ycp  restore_auto.rb  restore_auto.ycp  restore_bootloader.rb  restore_bootloader.ycp
src/include/restore/: helps.rb  summary_dialog.rb  ui.rb  ui.ycp
src/modules/: Restore.rb
testsuite/: Makefile.am
testsuite/tests/: regexp_escape.out  regexp_escape.ycp
